--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts"
+    "start:prod": "npm run build && NODE_ENV=production node dist/app.js",
+    "start:dev": "nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
