--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start:prod": "npm run build && NODE_ENV=production node dist/app.js",
+    "start:prod": "npm run build && cross-env NODE_ENV=production node dist/app.js",
     "start:dev": "nodemon src/app.ts"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
     "@types/joi": "^17.2.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "joi": "^17.12.1"
